# csv-aggregator

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: args.rs  config.rs  filter.rs  main.rs  naive_float.rs  parser.rs  records.rs
