[package]
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]
name = "csv-aggregator"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.29.0"
csv = "1.0.0-beta.5"
failure = "0.1.1"
glob = "0.2.11"
gmp = "0.3.1"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_yaml = "0.7.3"
