[package]
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]
name = "csv-aggregator"
version = "0.1.0"

[dependencies]
clap = "2.29.0"
combine = "3.0.0-alpha.4"
csv = "1.0.0-beta.5"
failure = "0.1.1"
glob = "0.2.11"
gmp = "0.3.1"
nom = "3.2.1"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_yaml = "0.7.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"
